defensas-patch-error.txt
  File "/tmp/patch_defensas_v3.py", line 17
    pattern = r"
              ^
SyntaxError: unterminated string literal (detected at line 17)
